--- a/index.html
+++ b/index.html
@@ -26,8 +26,23 @@
                 OrderFood
             </a>
         </div>
-        <div class="half-width ">
+        <div class="half-width" id="pic1">
             <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
+    <section class="background-image">
+        <div class="half-width" id="pic2">
+            <img src="images/female/Person Image.png" alt="">
+        </div class="half-width">
+
+        <div class="half-width">
+            <h2>About Me</h2>
+            <p>I am Arif Hosen. Currently I study in Computer Science & Engineering of Stamford University Bangladesh.
+                Also,I learn Web Development in Programming Hero by Jhankar Mahbub. I'm interested in Software
+                Development,Machine Learning and Computer Science.</p><br> <br> <br>
+
+            <a class="button-link" target="_blank" href="https://www.linkedin.com/in/arif-hosen-7827b2211/">Contact
+                me</a>
         </div>
     </section>
 
