--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="flexible">
         <div class="half-width">
             <h1><span class="set-color">Skip</span> The Diet, <br>
                 Just Eat Healthy <br>
@@ -30,7 +30,7 @@
             <img src="images/female/Group 8425.png" alt="">
         </div>
     </section>
-    <section class="background-image">
+    <section class="background-image flexible">
         <div class="half-width" id="pic2">
             <img src="images/female/Person Image.png" alt="">
         </div class="half-width">
@@ -45,6 +45,40 @@
                 me</a>
         </div>
     </section>
+    <section class="recipe">
+        <h3>My Recipies</h3><br>
+        <p id="recipe-p">Primarily in-house developed recipes with seasonal ingredients, along with an archives of over
+            30 years’
+            worth of old family recipes. Most recipes use whole foods and are double-tested in real home kitchens.</p>
+        <div class="flexible " id="box-r">
+            <div id="box1" class="recipe-i">
+
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h4>Recipie Title</h4>
+                <p>We measure the days of the week by how much the corn has grown. You can almost see it grow with your
+                    own
+                    eyes.</p>
+            </div>
+            <div class="recipe-i" id="box2">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h4>Recipie Title</h4>
+                <p>We measure the days of the week by how much the corn has grown. You can almost see it grow with your
+                    own
+                    eyes.</p>
+            </div>
+            <div id="box3" class="recipe-i">
+                <img src="images/food/Project Cover.png" alt="">
+                <h4>Recipie Title</h4>
+                <p>We measure the days of the week by how much the corn has grown. You can almost see it grow with your
+                    own
+                    eyes.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <h3><span class="set-color">Food</span> House</h3>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
 
 </body>
 
